[package]
name = "acorns"
authors = ["Marek Suchánek <msuchane@redhat.com>"]
version = "0.27.1"
edition = "2021"
# Check the Rust version using `cargo msrv verify`.
rust-version = "1.62"
description = "Generate an AsciiDoc release notes document from tracking tickets."
license = "GPL-3.0-or-later"
readme = "README.md"
categories = ["command-line-utilities", "text-processing", "template-engine"]
keywords = ["releasenotes", "asciidoc", "documentation", "RedHat"]
repository = "https://github.com/msuchane/acorns/"
homepage = "https://msuchane.github.io/acorns/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bpaf = { version = "0.7", features = ["derive", "bright-color"]}
log = "0.4"
simplelog = "0.12"
# Disable support for tracing_error and SpanTrace in eyre
color-eyre = { version = "0.6", default-features = false }
serde = "^1.0"
serde_derive = "^1.0"
serde_json = "1.0"
serde_yaml = "0.9"
bugzilla_query = "1.0"
jira_query = "1.2"
tokio = { version = "1.26", features = ["full"] }
askama = "^0.12"
chrono = ">=0.4.20"
counter = "^0.5"
regex = "1.7"
once_cell = "1.17"
include_dir = "0.7"
# Keep MSRV at 1.62
time = "=0.3.19"

[build-dependencies]
bpaf = { version = "0.7", features = ["derive", "manpage"]}
