[package]
name = "acorns"
authors = ["Marek Suchánek <msuchane@redhat.com>"]
version = "0.30.1"
edition = "2021"
# Check the Rust version using `cargo msrv verify`.
rust-version = "1.67"
description = "Generate an AsciiDoc release notes document from tracking tickets."
license = "GPL-3.0-or-later"
readme = "README.md"
categories = ["command-line-utilities", "text-processing", "template-engine"]
keywords = ["releasenotes", "asciidoc", "documentation", "RedHat"]
repository = "https://github.com/msuchane/acorns/"
homepage = "https://msuchane.github.io/acorns/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bpaf = { version = "0.9", features = ["derive", "bright-color"]}
log = "0.4"
simplelog = "0.12"
# Disable support for tracing_error and SpanTrace in eyre
color-eyre = { version = "0.6", default-features = false }
serde = "^1.0"
serde_derive = "^1.0"
serde_json = "1.0"
serde_yaml = "0.9"
bugzilla_query = "1.0"
jira_query = "1.3"
tokio = { version = "1.33", features = ["full"] }
askama = "^0.12"
time = "0.3"
counter = "^0.5"
regex = "1.10"
once_cell = "1.18"
include_dir = "0.7"
ignore = "0.4"

[build-dependencies]
bpaf = { version = "0.9", features = ["derive", "docgen"]}
time = "0.3"
